--- a/1-Object Literal Pattern/index.html
+++ b/1-Object Literal Pattern/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jquery without modularJS</title>
+  <title>ModularJS</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
